v.0.0.2 Responsividade de cadastro e login

--- a/pags/cadastro.html
+++ b/pags/cadastro.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main-login">
         <div class="left-login">
-            <h1> Construa seus melhores momentos com  TRAVELER!</h1>
+            <h1>Seus primeiros passos!</h1>
             <img class="img-viagens" src="/img/viagens.svg" alt="">
      </div>
      <div class="right-login">
