v.0.0.3 - correção de pasta e arquivo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <input type="password" name="senha" placeholder="senha">
             </div>
             <button class="btn-login">ENTRAR</button>
-            <p>Não possui conta? cadastre-se<a href="pags/cadastro.html"> aqui</a></p>
+            <p>Não possui conta? cadastre-se<a href="pages/cadastro.html"> aqui</a></p>
         </div>
      </div>
   </div>
