--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -33,7 +33,7 @@
                 <input type="password" name="senha" placeholder="senha">    
             </div>
             <button class="btn-login">ENTRAR</button>
-            <p>Já tenho uma conta! <a href="/inde.html"> Voltar</a></p>
+            <p>Já tenho uma conta! <a href="/index.html"> Voltar</a></p>
         </div>
      </div>
   </div>
