Responsividade e começo das validações

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/style.css">
+    <script src="/javaScript/cadastrar.js"></script>
     <title>Traveler</title>
 </head>
 <body>
@@ -17,22 +18,22 @@
         <div class="card-login">
             <h1>TRAVELER</h1>
             <div class="textefild">
-                <label for="usuario">usuario</label>
-                <input type="text" name="usuario" placeholder="usuario">
+                <label id="labelNome"  for="usuario">usuario</label>
+                <input id="nome" type="text" name="usuario" placeholder="usuario">
             </div>
             <div class="textefild">
-                <label for="E-mail">E-mail</label>
-                <input type="text" name="E-mail" placeholder="E-mail">
+                <label id="labelUsuario"  for="E-mail">E-mail</label>
+                <input id="email" type="text" name="E-mail" placeholder="E-mail">
             </div>
             <div class="textefild">
-                <label for="usuario">Senha</label>
-                <input type="password" name="senha" placeholder="senha">
+                <label id="labelSenha"  for="senha">Senha</label>
+                <input id="senha" type="password" name="senha" placeholder="senha">
             </div>
             <div class="textefild">
-                <label for="usuario">Confirmar senha</label>
-                <input type="password" name="senha" placeholder="senha">    
+                <label id="labelConfirmarSenha"  for="senha">Confirmar senha</label>
+                <input id="confirmarSenha" type="password" name="senha" placeholder="senha">    
             </div>
-            <button class="btn-login">ENTRAR</button>
+            <button onclick="cadastrar()" class="btn-login">cadastrar</button>
             <p>Já tenho uma conta! <a href="/index.html"> Voltar</a></p>
         </div>
      </div>
