--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <label for="usuario">Senha</label>
                 <input type="password" name="senha" placeholder="senha">
             </div>
-            <button  class="btn-login">ENTRAR</button>
+            <a href="./pages/homepage.html" class="btn-login">ENTRAR</a>
             <p>Não possui conta? cadastre-se<a href="pages/cadastro.html"> aqui</a></p>
         </div>
      </div>
