--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/style.css">
-    <script src="/javaScript/cadastrar.js"></script>
+    <script src="../JavaScript/cadastrar.js" defer></script>
     <title>Traveler</title>
 </head>
 <body>
