v.0.1.1 - reformulação das validações

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -18,8 +18,8 @@
         <div class="card-login">
             <h1>TRAVELER</h1>
             <div class="textefild">
-                <label id="labelNome"  for="usuario">usuario</label>
-                <input id="nome" type="text" name="usuario" placeholder="usuario">
+                <label id="labelNome"  for="usuario">nome</label>
+                <input id="nome" type="text" name="usuario" placeholder="Nome">
             </div>
             <div class="textefild">
                 <label id="labelUsuario"  for="E-mail">E-mail</label>
