feat: starting integration with api in home page

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -100,7 +100,7 @@
 
     <h1 class="heading"> <span>viagens</span> </h1>
 
-    <div class="box-container">
+    <div class="box-container" id="announcement">
 
         <div class="box" data-aos="fade-up">
             <div class="image">
