trabalhando na integração da pagina homepage

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -214,7 +214,7 @@
 
 
 <!-- custom js file link  -->
-<script src="/javaScript/homepage.js"></script>
+<script src="../JavaScript/homepage.js"></script>
 
 <script>
 
