autenticacao/validacao completa de cadastro/login

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             <h1>TRAVELER</h1>
 
             <div class="textefild">
-                <label  id="labelnomelogin" for="E-mail">E-mail</label>
-                <input  id="nomelgin" type="text" name="E-mail" placeholder="E-mail">
+                <label  id="labelEmailLogin" for="E-mail">E-mail</label>
+                <input  id="EmailLogin" type="text" name="E-mail" placeholder="E-mail">
             </div>
             <div class="textefild">
                 <label id="labelsenhalogin" for="usuario">Senha</label>
                 <input id="senhalogin" type="password" name="senha" placeholder="senha">
             </div>
-            <a href="./pages/homepage.html" class="btn-login">ENTRAR</a>
+            <button id="button" class="btn-login">ENTRAR</button>
             <p>Não possui conta? cadastre-se<a href="pages/cadastro.html"> aqui</a></p>
         </div>
      </div>
