refatoração de codigo

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -18,7 +18,7 @@
         <div class="card-login">
             <h1>TRAVELER</h1>
             <div class="textefild">
-                <label id="labelNome"  for="usuario">nome</label>
+                <label id="labelNome"  for="usuario">Nome</label>
                 <input id="nome" type="text" name="usuario" placeholder="Nome">
             </div>
             <div class="textefild">
@@ -30,10 +30,10 @@
                 <input id="senha" type="password" name="senha" placeholder="senha">
             </div>
             <div class="textefild">
-                <label id="labelConfirmarSenha"  for="senha">Confirmar senha</label>
+                <label id="labelConfirmarSenha"  for="senha">Confirmar Senha</label>
                 <input id="confirmarSenha" type="password" name="senha" placeholder="senha">    
             </div>
-            <button onclick="cadastrar()" class="btn-login">cadastrar</button>
+            <button onclick="cadastrar()" class="btn-login">Cadastrar</button>
             <p>Já tenho uma conta! <a href="/index.html"> Voltar</a></p>
         </div>
      </div>
