--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -37,15 +37,15 @@
     </div>
 
     <nav class="navbar">
-        <a href="#home">inicio</a>
-        <a href="#packages">viagens</a>
-        <a href="#">ajuda</a>
-        <a href="#">sobre nós</a>
+        <a href="#home">Inicio</a>
+        <a href="#packages">Viagens</a>
+        <a href="#">Ajuda</a>
+        <a href="#">Sobre Nós</a>
     </nav>
 
     <div class="login-form">
-        <a href="#">perfil</a>
-        <a href="/index.html">sair</a>
+        <a href="/pages/profilepage.html">Perfil</a>
+        <a href="/index.html">Sair</a>
     </div>
 
 
@@ -63,7 +63,7 @@
 
     <div class="content" data-aos="fade-up">
         <h3>Descubra sua viagem no melhor lugar</h3>
-        <a href="#packages" class="btn">explorar</a>
+        <a href="#packages" class="btn">Explorar</a>
     </div>
 
 </section>
@@ -77,12 +77,12 @@
     <form action="">
 
         <div class="inputBox">
-            <span>para onde</span>
+            <span>Para onde</span>
             <input type="text" placeholder="procurar destino">
         </div>
 
         <div class="inputBox">
-            <span>quando</span>
+            <span>Quando</span>
             <input type="date">
         </div>
 
@@ -98,79 +98,79 @@
 
 <section class="packages" id="packages">
 
-    <h1 class="heading"> <span>viagens</span> </h1>
+    <h1 class="heading"> <span>Viagens</span> </h1>
 
     <div class="box-container" id="announcement">
 
         <div class="box" data-aos="fade-up">
             <div class="image">
                 <img src="/img/Teresina.jpg" alt="">
-                <h3> <i class="fas fa-map-marker-alt"></i> teresina </h3>
+                <h3> <i class="fas fa-map-marker-alt"></i> Teresina </h3>
             </div>
             <div class="content">
                 <div class="price"> R$100.00 </div>
-                <p>picos para teresina</p>
-                <a href="#" class="btn"> acessar</a>
+                <p>Picos para Teresina</p>
+                <a href="#" class="btn"> Acessar</a>
             </div>
         </div>
 
         <div class="box" data-aos="fade-up">
             <div class="image">
                 <img src="/img/saoluis.jpg" alt="">
-                <h3> <i class="fas fa-map-marker-alt"></i> são luis-ma </h3>
+                <h3> <i class="fas fa-map-marker-alt"></i> São Luis-Ma </h3>
             </div>
             <div class="content">
                 <div class="price"> R$100.00 </div>
-                <p>teresina para são luis</p>
-                <a href="#" class="btn"> acessar</a>
+                <p>Teresina para São Luis</p>
+                <a href="#" class="btn"> Acessar</a>
             </div>
         </div>
 
         <div class="box" data-aos="fade-up">
             <div class="image">
                 <img src="/img/parnaiba.jpg" alt="">
-                <h3> <i class="fas fa-map-marker-alt"></i> parnaiba-pi </h3>
+                <h3> <i class="fas fa-map-marker-alt"></i> Parnaiba-Pi </h3>
             </div>
             <div class="content">
                 <div class="price"> R$100.00 </div>
-                <p>teresina para parnaiba</p>
-                <a href="#" class="btn"> acessar</a>
+                <p>Teresina para Parnaiba</p>
+                <a href="#" class="btn"> Acessar</a>
             </div>
         </div>
 
         <div class="box" data-aos="fade-up">
             <div class="image">
                 <img src="/img/floriano.jpg" alt="">
-                <h3> <i class="fas fa-map-marker-alt"></i> floriano-pi </h3>
+                <h3> <i class="fas fa-map-marker-alt"></i> Floriano-Pi </h3>
             </div>
             <div class="content">
                 <div class="price"> R$100.00 </div>
-                <p>picos para floriano</p>
-                <a href="#" class="btn"> acessar</a>
+                <p>Picos para Floriano</p>
+                <a href="#" class="btn"> Acessar</a>
             </div>
         </div>
 
         <div class="box" data-aos="fade-up">
             <div class="image">
                 <img src="/img/inhuma.jpg" alt="">
-                <h3> <i class="fas fa-map-marker-alt"></i> inhuma-pi </h3>
+                <h3> <i class="fas fa-map-marker-alt"></i> Inhuma-Pi </h3>
             </div>
             <div class="content">
                 <div class="price"> R$100.00  </div>
-                <p>picos para inhuma</p>
-                <a href="#" class="btn"> acessar</a>
+                <p>Picos para Inhuma</p>
+                <a href="#" class="btn"> Acessar</a>
             </div>
         </div>
 
         <div class="box" data-aos="fade-up">
             <div class="image">
                 <img src="/img/valença-pi.jpg" alt="">
-                <h3> <i class="fas fa-map-marker-alt"></i> valença-pi </h3>
+                <h3> <i class="fas fa-map-marker-alt"></i> Valença-Pi </h3>
             </div>
             <div class="content">
                 <div class="price"> R$100.00  </div>
-                <p>Picos para valença</p>
-                <a href="#" class="btn"> acessar</a>
+                <p>Picos para Valença</p>
+                <a href="#" class="btn"> Acessar</a>
             </div>
         </div>
 
@@ -187,16 +187,16 @@
     <div class="box-container">
 
         <div class="box" data-aos="fade-up">
-            <h3>links rápidos</h3>
-            <a href="#home"> <i class="fas fa-chevron-right"></i> inicio </a>
-            <a href="#packages"> <i class="fas fa-chevron-right"></i> viagens </a>
-            <a href="#"> <i class="fas fa-chevron-right"></i> perfil </a>
+            <h3>Links Rápidos</h3>
+            <a href="#home"> <i class="fas fa-chevron-right"></i> Inicio </a>
+            <a href="#packages"> <i class="fas fa-chevron-right"></i> Viagens </a>
+            <a href="#"> <i class="fas fa-chevron-right"></i> Perfil </a>
         </div>
 
         <div class="box" data-aos="fade-up">
             <h3>Sobre</h3>
             <a href=""><i class="fas fa-chevron-right"></i> Nossa equipe</a>
-            <a href=""><i class="fas fa-chevron-right"></i> ajuda</a>
+            <a href=""><i class="fas fa-chevron-right"></i> Ajuda</a>
         </div>
 
  
