começando a integraçao dos filtros da pagina de dashboard, mas deixei tudo comentado

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -78,16 +78,16 @@
 
         <div class="inputBox">
             <span>Para onde</span>
-            <input type="text" placeholder="procurar destino">
+            <input id="filterEndRoute" type="text" placeholder="procurar destino">
         </div>
 
         <div class="inputBox">
             <span>Quando</span>
-            <input type="date">
+            <input id="filterDate" type="date">
         </div>
 
-        <input type="submit" value="buscar" class="btn">
-
+        <input  type="submit" value="buscar" class="btn">
+<!-- onclick="filterAnnouncement()" -->
     </form>
 
 </section>
