commit para receber pull

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -38,7 +38,7 @@
 
     <nav class="navbar">
         <a href="#home">Inicio</a>
-        <a href="#packages">Viagens</a>
+        <a onclick="getAnnouncements()" href="#packages">Viagens</a>
         <a href="#">Ajuda</a>
         <a href="#">Sobre Nós</a>
     </nav>
@@ -63,7 +63,7 @@
 
     <div class="content" data-aos="fade-up">
         <h3>Descubra sua viagem no melhor lugar</h3>
-        <a href="#packages" class="btn">Explorar</a>
+        <a onclick="getAnnouncements()" href="#packages" class="btn">Explorar</a>
     </div>
 
 </section>
@@ -189,7 +189,7 @@
         <div class="box" data-aos="fade-up">
             <h3>Links Rápidos</h3>
             <a href="#home"> <i class="fas fa-chevron-right"></i> Inicio </a>
-            <a href="#packages"> <i class="fas fa-chevron-right"></i> Viagens </a>
+            <a onclick="getAnnouncements()" href="#packages"> <i class="fas fa-chevron-right"></i> Viagens </a>
             <a href="#"> <i class="fas fa-chevron-right"></i> Perfil </a>
         </div>
 
