finalizando integraçao da homepage

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -86,8 +86,8 @@
             <input id="filterDate" type="date">
         </div>
 
-        <input  type="submit" value="buscar" class="btn">
-<!-- onclick="filterAnnouncement()" -->
+        <input onclick="filterAnnouncement()" type="submit" value="buscar" class="btn">
+
     </form>
 
 </section>
