pagina de perfil

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -45,7 +45,7 @@
     
 
     <div class="login-form">
-        <a href="/pages/profilepage.html">Perfil</a>
+        <a href="/perfil/">Perfil</a>
         <a href="">Meus Anuncios</a>
         <a href="/index.html">Sair</a>
     </div>
