trocando o metodo post do filtro para get com query

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -93,8 +93,8 @@
             <input id="filterDate" type="date">
         </div>
 
-        <input onclick="filterAnnouncement()" type="submit" value="buscar" class="btn">
-
+        <input onclick="filterAnnouncement(event)" type="submit" value="buscar" class="btn">
+        
     </form>
 
 </section>
