--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -45,8 +45,8 @@
     
 
     <div class="login-form">
-        <a href="/perfil/">Perfil</a>
-        <a href="">Meus Anuncios</a>
+        <a href="#">Perfil</a>
+        <a href="">Criar Viagem</a>
         <a href="/index.html">Sair</a>
     </div>
 
@@ -117,6 +117,7 @@
             <div class="content">
                 <div class="price"> R$100.00 </div>
                 <p>Picos para Teresina</p>
+                <div class="date">10/12/2022</div>
                 <a href="#" class="btn"> Acessar</a>
             </div>
         </div>
@@ -129,6 +130,7 @@
             <div class="content">
                 <div class="price"> R$100.00 </div>
                 <p>Teresina para São Luis</p>
+                <div class="date">10/12/2022</div>
                 <a href="#" class="btn"> Acessar</a>
             </div>
         </div>
@@ -141,6 +143,7 @@
             <div class="content">
                 <div class="price"> R$100.00 </div>
                 <p>Teresina para Parnaiba</p>
+                <div class="date">10/12/2022</div>
                 <a href="#" class="btn"> Acessar</a>
             </div>
         </div>
@@ -153,6 +156,7 @@
             <div class="content">
                 <div class="price"> R$100.00 </div>
                 <p>Picos para Floriano</p>
+                <div class="date">10/12/2022</div>
                 <a href="#" class="btn"> Acessar</a>
             </div>
         </div>
@@ -165,6 +169,7 @@
             <div class="content">
                 <div class="price"> R$100.00  </div>
                 <p>Picos para Inhuma</p>
+                <div class="date">10/12/2022</div>
                 <a href="#" class="btn"> Acessar</a>
             </div>
         </div>
@@ -177,6 +182,7 @@
             <div class="content">
                 <div class="price"> R$100.00  </div>
                 <p>Picos para Valença</p>
+                <div class="date">10/12/2022</div>
                 <a href="#" class="btn"> Acessar</a>
             </div>
         </div>
@@ -197,9 +203,8 @@
         <div class="box" data-aos="fade-up">
             <h3>Links Rápidos</h3>
             <a href="#home"> <i class="fas fa-chevron-right"></i> Inicio </a>
-            <a onclick="getAnnouncements()" href="#packages"> <i class="fas fa-chevron-right"></i> Viagens </a>
             <a href="#"> <i class="fas fa-chevron-right"></i> Perfil </a>
-            <a href="#"><i class="fas fa-chevron-right"></i>Meus Anuncios</a>
+            <a onclick="getAnnouncements()" href="#packages"> <i class="fas fa-chevron-right"></i> Ver Viagens </a>
         </div>
 
         <div class="box" data-aos="fade-up">
