--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -109,7 +109,7 @@
 
     <div class="box-container" id="announcement">
 
-        <div class="box" data-aos="fade-up">
+        <!-- <div class="box" data-aos="fade-up">
             <div class="image">
                 <img src="/img/Teresina.jpg" alt="">
                 <h3> <i class="fas fa-map-marker-alt"></i> Teresina </h3>
@@ -184,8 +184,8 @@
                 <p>Picos para Valença</p>
                 <div class="date">10/12/2022</div>
                 <a href="#" class="btn"> Acessar</a>
-            </div>
-        </div>
+            </div> -->
+        <!-- </div> -->
         
     </div>
     
