integrando a barra superior de buscar

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -26,7 +26,7 @@
 
     <form action="" class="search-form">
         <input type="search" name="" placeholder="buscar" id="searchBox">
-        <label for="searchBox" class="fas fa-search"></label>
+        <label  onclick="filterAnnouncement(event)" for="searchBox" class="fas fa-search"></label>
     </form>
 
     <div class="icons">
