editando busca nas paginas - homepage e profilepage

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -37,7 +37,7 @@
     </div>
 
     <nav class="navbar">
-        <a href="#home">Inicio</a>
+        <a href="/pages/homepage.html">Inicio</a>
         <a onclick="getAnnouncements()" href="#packages">Viagens</a>
         <a href="#">Ajuda</a>
         <a href="#">Sobre Nós</a>
@@ -202,8 +202,8 @@
 
         <div class="box" data-aos="fade-up">
             <h3>Links Rápidos</h3>
-            <a href="#home"> <i class="fas fa-chevron-right"></i> Inicio </a>
-            <a href="#"> <i class="fas fa-chevron-right"></i> Perfil </a>
+            <a href="/pages/homepage.html"> <i class="fas fa-chevron-right"></i> Inicio </a>
+            <a href="/pages/profilepage.html"> <i class="fas fa-chevron-right"></i> Perfil </a>
             <a onclick="getAnnouncements()" href="#packages"> <i class="fas fa-chevron-right"></i> Ver Viagens </a>
         </div>
 
