--- a/pages/profilepage.html
+++ b/pages/profilepage.html
@@ -47,7 +47,7 @@
 
 
         <div class="login-form">
-            <a href="#">Perfil</a>
+            <a href="/pages/profilepage.html">Perfil</a>
             <a href="">Criar Viagem</a>
             <a href="/index.html">Sair</a>
         </div>
@@ -65,7 +65,6 @@
                 <div class="profile-image">
                     <img src="/img/space_cinematic.png" alt="" id="image">
                     <i onclick="showModal()" class="fas fa-image"></i>
-
                 </div>
 
                 <h2>Alessandro Silva</h2>
@@ -79,11 +78,11 @@
                 <form action="" class="form-profile">
                     <div class="input-account">
                         <label>Nome</label>
-                        <input type="text" placeholder="Nome">
+                        <input type="text" placeholder="Nome"  value="Alessandro Silva">
                     </div>
                     <div class="input-account">
                         <label>E-Mail</label>
-                        <input type="text" placeholder="E-mail">
+                        <input type="text" placeholder="E-mail" value="teste2@gmail.com">
                     </div>
                     <div class="column">
                         <div class="input-account">
@@ -103,16 +102,16 @@
 
                     <div class="input-accountPassword">
                         <label>Senha Atual</label>
-                        <input type="text" placeholder="Senha Atual">
+                        <input type="password" placeholder="Senha Atual">
                     </div>
                     <div class="column">
                         <div class="input-account">
                             <label>Nova Senha</label>
-                            <input type="text" placeholder="Nova Senha">
+                            <input type="password" placeholder="Nova Senha">
                         </div>
                         <div class="input-account">
                             <label>Confirmar</label>
-                            <input type="text" placeholder="Confirmar">
+                            <input type="password" placeholder="Confirmar">
                         </div>
                     </div>
                     <div class="inputfield">
@@ -140,7 +139,7 @@
                             </div>
                             <div class="input-account">
                                 <label>Senha Atual</label>
-                                <input type="text" placeholder="Senha">
+                                <input type="password" placeholder="Senha">
                             </div>
                             <div class="buttons">
                                 <button class="yes">Sim</button>
@@ -163,9 +162,9 @@
 
         <div class="box" data-aos="fade-up">
             <h3>Links Rápidos</h3>
-            <a href="#home"> <i class="fas fa-chevron-right"></i> Inicio </a>
-            <a href="#"> <i class="fas fa-chevron-right"></i> Perfil </a>
-            <a onclick="getAnnouncements()" href="#packages"> <i class="fas fa-chevron-right"></i> Ver Viagens </a>
+            <a href="/pages/homepage.html"> <i class="fas fa-chevron-right"></i> Inicio </a>
+            <a href="/pages/profilepage.html"> <i class="fas fa-chevron-right"></i> Perfil </a>
+            <a onclick="getAnnouncements()" href="/pages/homepage.html"> <i class="fas fa-chevron-right"></i> Ver Viagens </a>
         </div>
 
         <div class="box" data-aos="fade-up">
