pagina de ajuda / debitos tecnicos a corrigir

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -39,8 +39,8 @@
     <nav class="navbar">
         <a href="/pages/homepage.html">Inicio</a>
         <a onclick="getAnnouncements()" href="#packages">Viagens</a>
-        <a href="#">Ajuda</a>
-        <a href="#">Sobre Nós</a>
+        <a href="sobre.html">Ajuda</a>
+        <a href="sobre.html">Sobre Nós</a>
     </nav>
     
 
