--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -62,88 +62,34 @@
                     <i onclick="showModal()" class="fas fa-image"></i>
                 </div>
 
-                <h2>Alessandro Silva</h2>
+                <h2>Traveler</h2>
             </div>
 
             <div class="wrapper">
 
                 <div class="title">
-                    Informações da conta
+                    Informações sobre nossa equipe
                 </div>
                 <form action="" class="form-profile">
-                    <div class="input-account">
-                        <label>Nome</label>
-                        <input type="text" placeholder="Nome"  value="Alessandro Silva">
-                    </div>
-                    <div class="input-account">
-                        <label>E-Mail</label>
-                        <input type="text" placeholder="E-mail" value="teste2@gmail.com">
-                    </div>
-                    <div class="column">
-                        <div class="input-account">
-                            <label>Estado</label>
-                            <input type="text" placeholder="Estado">
-                        </div>
-                        <div class="input-account">
-                            <label>Cidade</label>
-                            <input type="text" placeholder="Cidade">
-                        </div>
-                    </div>
-                </form>
+             <div>
+                <h2>Traveler é um projeto pensado pelos devs Alessandro, WesleyS e Sales e produzido pelos mesmos,<br> 
+                nosso app tem como objetivo de facilitar as Viagens entre cidades e fornecendo anuncios pra nossos usuarios.  
+                <br>
+                <br>
+                <br>  
+                </h2>
+             </div>
+             
+             <div>
                 <div class="title">
-                    Informações de Senha
+                    Ajuda
                 </div>
-                <form action="" class="form-profile">
-
-                    <div class="input-accountPassword">
-                        <label>Senha Atual</label>
-                        <input type="password" placeholder="Senha Atual">
-                    </div>
-                    <div class="column">
-                        <div class="input-account">
-                            <label>Nova Senha</label>
-                            <input type="password" placeholder="Nova Senha">
-                        </div>
-                        <div class="input-account">
-                            <label>Confirmar</label>
-                            <input type="password" placeholder="Confirmar">
-                        </div>
-                    </div>
-                    <div class="inputfield">
-                        <input type="submit" value="Alterar" class="btn-profile">
-                    </div>
-                </form>
-
-                <div class="title">
-                    Deletar conta
-                </div>
-                <div class="delete-subtitle">
-                    <p>Depois de excluir sua conta, não há como voltar atrás. Por favor, tenha certeza!</p>
-                </div>
-                <div class="delete-button">
-                    <button onclick="showDelete()">Deletar sua conta</button>
-                </div>
-                <div class="delete" id="delete">
-                    <div class="delete-content">
-                        <div class="delete-itens">
-                            <h1>Tem certeza disso?</h1>
-                            <p>Digite seu Email e Senha para confirmação de delatar conta.</p>
-                            <div class="input-account">
-                                <label>E-Mail</label>
-                                <input type="text" placeholder="E-mail">
-                            </div>
-                            <div class="input-account">
-                                <label>Senha Atual</label>
-                                <input type="password" placeholder="Senha">
-                            </div>
-                            <div class="buttons">
-                                <button class="yes">Sim</button>
-
-                                <button class="no" onclick="closeDelete()">Não</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+               <h1>Caso tenha alguma dificuldade em algum processo, por favor deixe um feedback de como podemos melhorar na barra de comentarioss</h1></div>
+               <br>
+               <br>
+               <br>
+               <br>
+               <br>
             </div>
     </section>
     <!-- profile section ends-->
@@ -197,3 +143,6 @@
 </body>
 
 </html>
+
+
+<!-- esse site foi feito da pior forma possivel, por gentileza desconsidere o codigo e aproveite o interface -->
