fazendo o login com localstorage; fazendo logout; e corrigindo a verificaçao no front

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -47,7 +47,7 @@
     <div class="login-form">
         <a href="/pages/profilepage.html">Perfil</a>
         <a href="">Criar Viagem</a>
-        <a href="/index.html">Sair</a>
+        <a onclick="logout()" href="/index.html">Sair</a>
     </div>
 
 
