integrando get imagem de anuncio

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -25,7 +25,7 @@
     <a href="#" class="logo">  TRAVELER </a>
 
     <form action="" class="search-form">
-        <input type="search" name="" placeholder="buscar" id="searchBox">
+        <input type="search" name="" placeholder="buscar por destino" id="searchBox">
         <label  onclick="filterAnnouncement(event)" for="searchBox" class="fas fa-search"></label>
     </form>
 
