pagina de anuncio e correção do botao de perfil

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -39,15 +39,14 @@
     <nav class="navbar">
         <a href="/pages/homepage.html">Inicio</a>
         <a onclick="getAnnouncements()" href="#packages">Viagens</a>
-        <a href="sobre.html">Ajuda</a>
-        <a href="sobre.html">Sobre Nós</a>
+        <a href="#">Sobre Nós</a>
     </nav>
     
 
     <div class="login-form">
         <a href="/pages/profilepage.html">Perfil</a>
-        <a href="">Criar Viagem</a>
-        <a onclick="logout()" href="/index.html">Sair</a>
+        <a href="/pages/announcementpage.html">Criar Viagem</a>
+        <a href="/index.html">Sair</a>
     </div>
 
 
@@ -210,7 +209,6 @@
         <div class="box" data-aos="fade-up">
             <h3>Sobre</h3>
             <a href=""><i class="fas fa-chevron-right"></i> Nossa equipe</a>
-            <a href=""><i class="fas fa-chevron-right"></i> Ajuda</a>
         </div>
 
  
