--- a/pages/profilepage.html
+++ b/pages/profilepage.html
@@ -36,6 +36,7 @@
         <nav class="navbar">
             <a href="/pages/homepage.html">Inicio</a>
             <a onclick="getAnnouncements()" href="/pages/homepage.html">Viagens</a>
+            <a href="#">Sobre Nós</a>
             <a href="sobre.html">Ajuda</a>
             <a href="sobre.html">Sobre Nós</a>
         </nav>
@@ -43,7 +44,7 @@
 
         <div class="login-form">
             <a href="/pages/profilepage.html">Perfil</a>
-            <a href="">Criar Viagem</a>
+            <a href="/pages/announcementpage.html">Criar Viagem</a>
             <a href="/index.html">Sair</a>
         </div>
 
@@ -131,7 +132,7 @@
                     <div class="delete-content">
                         <div class="delete-itens">
                             <h1>Tem certeza disso?</h1>
-                            <p>Digite seu Email e Senha para confirmação de delatar conta.</p>
+                            <p>Digite seu Email e Senha para confirmação de deletar conta.</p>
                             <div class="input-account">
                                 <label>E-Mail</label>
                                 <input type="text" placeholder="E-mail">
