--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -39,13 +39,13 @@
     <nav class="navbar">
         <a href="/pages/homepage.html">Inicio</a>
         <a onclick="getAnnouncements()" href="#packages">Viagens</a>
-        <a href="#">Sobre Nós</a>
+        <a href="/pages/about.html">Sobre Nós</a>
     </nav>
     
 
     <div class="login-form">
         <a href="/pages/profilepage.html">Perfil</a>
-        <a href="/pages/announcementpage.html">Criar Viagem</a>
+        <a href="/pages/announcementpage.html">Minhas Viagens</a>
         <a href="/index.html">Sair</a>
     </div>
 
@@ -208,7 +208,7 @@
 
         <div class="box" data-aos="fade-up">
             <h3>Sobre</h3>
-            <a href=""><i class="fas fa-chevron-right"></i> Nossa equipe</a>
+            <a href="/pages/about.html"><i class="fas fa-chevron-right"></i> Nossa equipe</a>
         </div>
 
  
