--- a/pages/profilepage.html
+++ b/pages/profilepage.html
@@ -36,15 +36,13 @@
         <nav class="navbar">
             <a href="/pages/homepage.html">Inicio</a>
             <a onclick="getAnnouncements()" href="/pages/homepage.html">Viagens</a>
-            <a href="#">Sobre Nós</a>
-            <a href="sobre.html">Ajuda</a>
-            <a href="sobre.html">Sobre Nós</a>
+            <a href="/pages/about.html">Sobre Nós</a>
         </nav>
 
 
         <div class="login-form">
             <a href="/pages/profilepage.html">Perfil</a>
-            <a href="/pages/announcementpage.html">Criar Viagem</a>
+            <a href="/pages/announcementpage.html">Minhas Viagens</a>
             <a href="/index.html">Sair</a>
         </div>
 
@@ -59,11 +57,10 @@
         <div class="container">
             <div class="profile">
                 <div class="profile-image" id="avatarUser">
-                     <!-- <img src="/img/space_cinematic.png" alt="" id="image">
-                    <input type="file" accept="image/*" id="picture_image" onclick="showModal(e)" class="fas fa-image"></input> -->
                     <img src="/img/space_cinematic.png" alt="" id="image">
                     <label class="fas fa-image" for="picture_image" id="label_image_profile">
                             <input type="file" onchange="updateImage()" accept="image/*" id="picture_image" class="fas fa-image"></input>
+                            <span class="tooltipe">Alterar Imagem</span>
                     </label>
                 </div>
 
@@ -169,8 +166,7 @@
 
         <div class="box" data-aos="fade-up">
             <h3>Sobre</h3>
-            <a href=""><i class="fas fa-chevron-right"></i> Nossa equipe</a>
-            <a href=""><i class="fas fa-chevron-right"></i> Ajuda</a>
+            <a href="/pages/about.html"><i class="fas fa-chevron-right"></i> Nossa equipe</a>
         </div>
 
  
