iniciando integração e acrescentando verificação de ausencia de token da página de anúncios

--- a/pages/announcementpage.html
+++ b/pages/announcementpage.html
@@ -155,30 +155,30 @@
                 <form action="" class="form-profile">
                     <div class="input-account">
                         <label>Nome do motorista</label>
-                        <input type="text" placeholder="Nome"  value="Alessandro Silva">
+                        <input id="name" type="text" placeholder="Nome"  value="Alessandro Silva">
                     </div>  
                     <div class="input-account">
                         <label>Link de contato</label>
-                        <input type="text" placeholder="E-mail" value="/whatsapp.com">
+                        <input id="socialLink" type="text" placeholder="E-mail" value="/whatsapp.com">
                     </div>
                     <div class="column">
                         <div class="input-account">
                             <label>Valor</label>
-                            <input type="text" placeholder="Valor">
+                            <input id="price" type="text" placeholder="Valor">
                         </div>
                         <div class="input-account">
                             <label>Data</label>
-                            <input type="text" placeholder="Data">
+                            <input id="date" type="text" placeholder="Data">
                         </div>
                     </div>
                     <div class="column">
                         <div class="input-account">
                             <label>De onde</label>
-                            <input type="text" placeholder="indo de...">
+                            <input id="startRoute" type="text" placeholder="indo de...">
                         </div>
                         <div class="input-account">
                             <label>Para onde</label>
-                            <input type="text" placeholder="para...">
+                            <input id="endRoute" type="text" placeholder="para...">
                         </div>
                     </div>
                 </form>
