continuando integração da pag de anuncio

--- a/pages/about.html
+++ b/pages/about.html
@@ -106,4 +106,4 @@
 </html>
 
 
-<!-- esse site foi feito da pior forma possivel, por gentileza desconsidere o codigo e aproveite o interface -->
+<!-- esse site foi feito da pior forma possivel, por gentileza desconsidere o codigo e aproveite o interface ); -->
