terminando integração da padg de pegar meus anuncio

--- a/pages/announcementpage.html
+++ b/pages/announcementpage.html
@@ -27,8 +27,8 @@
         <a href="#" class="logo"> TRAVELER </a>
 
         <form action="" class="search-form">
-            <input type="search" name="" placeholder="buscar" id="searchBox">
-            <label for="searchBox" class="fas fa-search"></label>
+            <input type="search" name="" placeholder="buscar por destino" id="searchBox">
+            <label onclick="getMyAnnouncements()" for="searchBox" class="fas fa-search"></label>
         </form>
 
         <div class="icons">
