--- a/pages/announcementpage.html
+++ b/pages/announcementpage.html
@@ -69,7 +69,7 @@
 
         <div class="box-container" id="announcement">
 
-            <div class="box" data-aos="fade-up">
+            <!-- <div class="box" data-aos="fade-up">
                 <div class="image">
                     <img src="/img/carro 1.jpg" alt="">
                     <h3> <i class="fas fa-map-marker-alt"></i> Teresina </h3>
@@ -144,7 +144,7 @@
                     <div class="date">28/01/2023</div>
                     <a href="#" class="btn"> Acessar</a>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="addAnnouncement" >
             <i class="fas fa-plus" onclick="showAdd()"></i>
@@ -186,6 +186,7 @@
                 <div class="buttons">
                     <button class="no" onclick="closeRemove()">Não</button>
                     <button class="yes" onclick="closeRemove()">Sim</button>
+                    <!-- addAnnouncement() -->
                 </div>
             </div>
         </div>
